schema/testdata/errors/attribute_unique.keel
model Person {
    fields {
        firstName Text
        lastName Text
    }

    //expect-error:13:24:E016:Invalid value, expected at least two field names to be provided
    @unique([firstName])

    @unique(
        firstName,
        //expect-error:9:17:AttributeArgumentError:unexpected argument for @unique as only a single argument is expected
        lastName
    )

    //expect-error:25:32:E016:Invalid value, expected any of the following identifiers - firstName, or lastName
    @unique([firstName, surname])

    @unique(
        unknown1,
        //expect-error:9:17:AttributeArgumentError:unexpected argument for @unique as only a single argument is expected
        unknown2
    )

    @unique(
        "first_name",
        //expect-error:9:20:AttributeArgumentError:unexpected argument for @unique as only a single argument is expected
        "last_name"
    )

    //expect-error:14:26:E016:Invalid value, expected any of the following identifiers - firstName, or lastName
    //expect-error:28:39:E016:Invalid value, expected any of the following identifiers - firstName, or lastName
    @unique(["first_name", "last_name"])
}
